--- a/styles/room.css
+++ b/styles/room.css
@@ -90,3 +90,32 @@
   padding: .8rem 2.4rem;
   line-height: 2.4rem;
 }
+
+/*** Questions ***/
+
+.question-wrapper {
+  background: var(--light-blue);
+  margin-bottom: .8rem;
+  border-radius: 0 .8rem .8rem .8rem;
+  padding: 2.4rem;
+}
+
+.question-wrapper .question-content{
+  display: flex;
+  align-items: center;
+}
+
+.question-wrapper .question-content p{
+  margin-left: 1.6rem;
+}
+
+.question-wrapper .actions{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.question-wrapper .actions > a{
+  display: flex;
+  align-items: center;
+}
